Some changes api and cors